--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     job:
       names: ${job.name:NONE} #job.name값이 없으면 NONE을 할당, NONE이 할당되면 어떤 배치도 실행하지 않겠다는 의미
 
+logging.level.org.springframework.batch: DEBUG
+
 ---
 spring:
   profiles: local
